paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_002/target.compile.log
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_002/target.rs:33:17
   |
33 |     if n as i32 < 0 {
   |                 ^ --- interpreted as generic arguments
   |                 |
   |                 not interpreted as comparison
   |
help: try comparing the cast value
   |
33 |     if (n as i32) < 0 {
   |        +        +

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_002/target.rs:73:14
   |
73 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error[E0502]: cannot borrow `*base` as immutable because it is also borrowed as mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_002/target.rs:47:56
   |
47 |         safe_move(n, &mut base[p_start..p_start + n], &base[q_start..q_start + n]);
   |         ---------         ----                         ^^^^ immutable borrow occurs here
   |         |                 |
   |         |                 mutable borrow occurs here
   |         mutable borrow later used by call
   |
   = help: use `.split_at_mut(position)` to obtain two mutable non-overlapping sub-slices

error[E0502]: cannot borrow `*base` as immutable because it is also borrowed as mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_002/target.rs:49:48
   |
49 |         f(n, &mut base[p_start..p_start + n], &base[q_start..q_start + n]);
   |         -         ----                         ^^^^ immutable borrow occurs here
   |         |         |
   |         |         mutable borrow occurs here
   |         mutable borrow later used by call
   |
   = help: use `.split_at_mut(position)` to obtain two mutable non-overlapping sub-slices

error[E0502]: cannot borrow `expect` as immutable because it is also borrowed as mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_002/target.rs:80:42
   |
80 |     safe_move(50, &mut expect[50..100], &expect[0..50]);
   |     ---------          ------            ^^^^^^ immutable borrow occurs here
   |     |                  |
   |     |                  mutable borrow occurs here
   |     mutable borrow later used by call
   |
   = help: use `.split_at_mut(position)` to obtain two mutable non-overlapping sub-slices

error[E0502]: cannot borrow `expect` as immutable because it is also borrowed as mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_002/target.rs:81:40
   |
81 |     safe_move(50, &mut expect[1..51], &expect[0..50]);
   |     ---------          ------          ^^^^^^ immutable borrow occurs here
   |     |                  |
   |     |                  mutable borrow occurs here
   |     mutable borrow later used by call
   |
   = help: use `.split_at_mut(position)` to obtain two mutable non-overlapping sub-slices

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0277, E0502.
For more information about an error, try `rustc --explain E0277`.